fix(europa): harden S5A schema replay and compute compatibility